nlp and cv done mostly

--- a/question3-nlp.ipynb
+++ b/question3-nlp.ipynb
@@ -2,28 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import json\n",
     "from sklearn.metrics import cohen_kappa_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv('NLP-annotations-Arjun.csv')\n",
-    "df2 = pd.read_csv('NLP-annotations-Venkat.csv')"
+    "df1 = pd.read_csv('NLP-annotations/NLP-annotations-Arjun.csv')\n",
+    "df2 = pd.read_csv('NLP-annotations/NLP-annotations-Venkat.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
        "2  2025-01-24T14:15:39.424390Z  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +223,7 @@
        "2  2025-01-24T10:57:42.074330Z  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +392,7 @@
        "2  Uttarkashi Tunnel Rescue: उत्तरकाशी टनल में फं...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,458 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'[{\"start\":0,\"end\":6,\"text\":\"World \",\"labels\":[\"PROPN\"]},{\"start\":6,\"end\":10,\"text\":\"Cup \",\"labels\":[\"PROPN\"]},{\"start\":10,\"end\":16,\"text\":\"Final \",\"labels\":[\"PROPN\"]},{\"start\":16,\"end\":20,\"text\":\"2023\",\"labels\":[\"NUM\"]},{\"start\":20,\"end\":22,\"text\":\": \",\"labels\":[\"X\"]},{\"start\":22,\"end\":26,\"text\":\"मां \",\"labels\":[\"NOUN\"]},{\"start\":26,\"end\":29,\"text\":\"ने \",\"labels\":[\"ADP\"]},{\"start\":29,\"end\":33,\"text\":\"शमी \",\"labels\":[\"PROPN\"]},{\"start\":33,\"end\":36,\"text\":\"से \",\"labels\":[\"ADP\"]},{\"start\":36,\"end\":40,\"text\":\"कहा \",\"labels\":[\"VERB\"]},{\"start\":40,\"end\":45,\"text\":\"बेटा \",\"labels\":[\"NOUN\"]},{\"start\":45,\"end\":51,\"text\":\"world \",\"labels\":[\"NOUN\"]},{\"start\":51,\"end\":54,\"text\":\"cup\",\"labels\":[\"NOUN\"]},{\"start\":55,\"end\":60,\"text\":\"चाहिए\",\"labels\":[\"VERB\"]},{\"start\":60,\"end\":61,\"text\":\",\",\"labels\":[\"X\"]},{\"start\":62,\"end\":68,\"text\":\"finals\",\"labels\":[\"NOUN\"]},{\"start\":69,\"end\":72,\"text\":\"से \",\"labels\":[\"ADP\"]},{\"start\":72,\"end\":77,\"text\":\"पहले \",\"labels\":[\"ADV\"]},{\"start\":77,\"end\":81,\"text\":\"शमी \",\"labels\":[\"PROPN\"]},{\"start\":81,\"end\":84,\"text\":\"की \",\"labels\":[\"ADP\"]},{\"start\":93,\"end\":96,\"text\":\"बात\",\"labels\":[\"VERB\"]},{\"start\":84,\"end\":90,\"text\":\"अम्मी \",\"labels\":[\"NOUN\"]},{\"start\":90,\"end\":93,\"text\":\"से \",\"labels\":[\"ADP\"]}]'"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df1_pos['pos'][4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'[{\"start\":0,\"end\":6,\"text\":\"World \",\"labels\":[\"PROPN\"]},{\"start\":6,\"end\":10,\"text\":\"Cup \",\"labels\":[\"PROPN\"]},{\"start\":10,\"end\":16,\"text\":\"Final \",\"labels\":[\"PROPN\"]},{\"start\":16,\"end\":20,\"text\":\"2023\",\"labels\":[\"NUM\"]},{\"start\":20,\"end\":21,\"text\":\":\",\"labels\":[\"X\"]},{\"start\":22,\"end\":26,\"text\":\"मां \",\"labels\":[\"NOUN\"]},{\"start\":26,\"end\":28,\"text\":\"ने\",\"labels\":[\"ADP\"]},{\"start\":29,\"end\":33,\"text\":\"शमी \",\"labels\":[\"PROPN\"]},{\"start\":33,\"end\":35,\"text\":\"से\",\"labels\":[\"ADP\"]},{\"start\":36,\"end\":39,\"text\":\"कहा\",\"labels\":[\"VERB\"]},{\"start\":40,\"end\":44,\"text\":\"बेटा\",\"labels\":[\"NOUN\"]},{\"start\":45,\"end\":51,\"text\":\"world \",\"labels\":[\"PROPN\"]},{\"start\":51,\"end\":55,\"text\":\"cup \",\"labels\":[\"PROPN\"]},{\"start\":55,\"end\":60,\"text\":\"चाहिए\",\"labels\":[\"VERB\"]},{\"start\":60,\"end\":61,\"text\":\",\",\"labels\":[\"X\"]},{\"start\":62,\"end\":69,\"text\":\"finals \",\"labels\":[\"NOUN\"]},{\"start\":69,\"end\":71,\"text\":\"से\",\"labels\":[\"ADP\"]},{\"start\":72,\"end\":76,\"text\":\"पहले\",\"labels\":[\"ADV\"]},{\"start\":77,\"end\":80,\"text\":\"शमी\",\"labels\":[\"PROPN\"]},{\"start\":81,\"end\":83,\"text\":\"की\",\"labels\":[\"ADP\"]},{\"start\":84,\"end\":90,\"text\":\"अम्मी \",\"labels\":[\"PROPN\"]},{\"start\":90,\"end\":92,\"text\":\"से\",\"labels\":[\"ADP\"]},{\"start\":93,\"end\":96,\"text\":\"बात\",\"labels\":[\"NOUN\"]}]'"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2_pos['pos'][4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['World',\n",
-       " 'Cup',\n",
-       " 'Final',\n",
-       " '2023:',\n",
-       " 'मां',\n",
-       " 'ने',\n",
-       " 'शमी',\n",
-       " 'से',\n",
-       " 'कहा',\n",
-       " 'बेटा',\n",
-       " 'world',\n",
-       " 'cup',\n",
-       " 'चाहिए,',\n",
-       " 'finals',\n",
-       " 'से',\n",
-       " 'पहले',\n",
-       " 'शमी',\n",
-       " 'की',\n",
-       " 'अम्मी',\n",
-       " 'से',\n",
-       " 'बात']"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g = df1_pos['text'][4]\n",
-    "g.split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_arj = {}\n",
-    "dict_ven = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "data_str = df1_pos['pos'][4]\n",
-    "data_list = json.loads(data_str)\n",
-    "\n",
-    "for item in data_list:\n",
-    "    dict_arj[item['text']] = item['labels'][0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "data_str = df2_pos['pos'][4]\n",
-    "data_list = json.loads(data_str)\n",
-    "\n",
-    "for item in data_list:\n",
-    "    dict_ven[item['text']] = item['labels'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'World ': 'PROPN',\n",
-       " 'Cup ': 'PROPN',\n",
-       " 'Final ': 'PROPN',\n",
-       " '2023': 'NUM',\n",
-       " ': ': 'X',\n",
-       " 'मां ': 'NOUN',\n",
-       " 'ने ': 'ADP',\n",
-       " 'शमी ': 'PROPN',\n",
-       " 'से ': 'ADP',\n",
-       " 'कहा ': 'VERB',\n",
-       " 'बेटा ': 'NOUN',\n",
-       " 'world ': 'NOUN',\n",
-       " 'cup': 'NOUN',\n",
-       " 'चाहिए': 'VERB',\n",
-       " ',': 'X',\n",
-       " 'finals': 'NOUN',\n",
-       " 'पहले ': 'ADV',\n",
-       " 'की ': 'ADP',\n",
-       " 'बात': 'VERB',\n",
-       " 'अम्मी ': 'NOUN'}"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dict_arj"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'World ': 'PROPN',\n",
-       " 'Cup ': 'PROPN',\n",
-       " 'Final ': 'PROPN',\n",
-       " '2023': 'NUM',\n",
-       " ':': 'X',\n",
-       " 'मां ': 'NOUN',\n",
-       " 'ने': 'ADP',\n",
-       " 'शमी ': 'PROPN',\n",
-       " 'से': 'ADP',\n",
-       " 'कहा': 'VERB',\n",
-       " 'बेटा': 'NOUN',\n",
-       " 'world ': 'PROPN',\n",
-       " 'cup ': 'PROPN',\n",
-       " 'चाहिए': 'VERB',\n",
-       " ',': 'X',\n",
-       " 'finals ': 'NOUN',\n",
-       " 'पहले': 'ADV',\n",
-       " 'शमी': 'PROPN',\n",
-       " 'की': 'ADP',\n",
-       " 'अम्मी ': 'PROPN',\n",
-       " 'बात': 'NOUN'}"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dict_ven"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_arj = {key.strip(): value for key, value in dict_arj.items()}\n",
-    "dict_ven = {key.strip(): value for key, value in dict_ven.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g = df1_pos['text'][4]\n",
-    "text_arr = g.split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['World',\n",
-       " 'Cup',\n",
-       " 'Final',\n",
-       " '2023:',\n",
-       " 'मां',\n",
-       " 'ने',\n",
-       " 'शमी',\n",
-       " 'से',\n",
-       " 'कहा',\n",
-       " 'बेटा',\n",
-       " 'world',\n",
-       " 'cup',\n",
-       " 'चाहिए,',\n",
-       " 'finals',\n",
-       " 'से',\n",
-       " 'पहले',\n",
-       " 'शमी',\n",
-       " 'की',\n",
-       " 'अम्मी',\n",
-       " 'से',\n",
-       " 'बात']"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "World\n",
-      "Cup\n",
-      "Final\n",
-      "2023:\n",
-      "मां\n",
-      "ने\n",
-      "शमी\n",
-      "से\n",
-      "कहा\n",
-      "बेटा\n",
-      "world\n",
-      "cup\n",
-      "चाहिए,\n",
-      "finals\n",
-      "से\n",
-      "पहले\n",
-      "शमी\n",
-      "की\n",
-      "अम्मी\n",
-      "से\n",
-      "बात\n"
-     ]
-    }
-   ],
-   "source": [
-    "kappa_arj = []\n",
-    "kappa_ven = []\n",
-    "\n",
-    "for i in text_arr:\n",
-    "    print(i)\n",
-    "    kappa_arj.append(dict_arj.get(i, 'X'))  \n",
-    "    kappa_ven.append(dict_ven.get(i, 'X'))  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PROPN',\n",
-       " 'PROPN',\n",
-       " 'PROPN',\n",
-       " 'X',\n",
-       " 'NOUN',\n",
-       " 'ADP',\n",
-       " 'PROPN',\n",
-       " 'ADP',\n",
-       " 'VERB',\n",
-       " 'NOUN',\n",
-       " 'NOUN',\n",
-       " 'NOUN',\n",
-       " 'X',\n",
-       " 'NOUN',\n",
-       " 'ADP',\n",
-       " 'ADV',\n",
-       " 'PROPN',\n",
-       " 'ADP',\n",
-       " 'NOUN',\n",
-       " 'ADP',\n",
-       " 'VERB']"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kappa_arj"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PROPN',\n",
-       " 'PROPN',\n",
-       " 'PROPN',\n",
-       " 'X',\n",
-       " 'NOUN',\n",
-       " 'ADP',\n",
-       " 'PROPN',\n",
-       " 'ADP',\n",
-       " 'VERB',\n",
-       " 'NOUN',\n",
-       " 'PROPN',\n",
-       " 'PROPN',\n",
-       " 'X',\n",
-       " 'NOUN',\n",
-       " 'ADP',\n",
-       " 'ADV',\n",
-       " 'PROPN',\n",
-       " 'ADP',\n",
-       " 'PROPN',\n",
-       " 'ADP',\n",
-       " 'NOUN']"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kappa_ven"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Keys in dict_arj: dict_keys(['World', 'Cup', 'Final', '2023', ':', 'मां', 'ने', 'शमी', 'से', 'कहा', 'बेटा', 'world', 'cup', 'चाहिए', ',', 'finals', 'पहले', 'की', 'बात', 'अम्मी'])\n",
-      "Keys in dict_ven: dict_keys(['World', 'Cup', 'Final', '2023', ':', 'मां', 'ने', 'शमी', 'से', 'कहा', 'बेटा', 'world', 'cup', 'चाहिए', ',', 'finals', 'पहले', 'की', 'अम्मी', 'बात'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Keys in dict_arj:\", dict_arj.keys())\n",
-    "print(\"Keys in dict_ven:\", dict_ven.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(dict_ven)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7565217391304347"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cohen_kappa_score(kappa_arj, kappa_ven)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +449,7 @@
        "(350, 350)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +469,7 @@
        "0.44588902428493304"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
