--- a/question3-nlp.ipynb
+++ b/question3-nlp.ipynb
@@ -476,8 +476,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We obtained a Cohen's Kappa score of 0.8011, which falls within the range of very good agreement (0.80 - 1.00). This indicates a high level of inter-annotator agreement between Arjun and Venkat, suggesting that their annotations are highly consistent and reliable."
+    "We obtained a Cohen's Kappa score of 0.8011, which falls within the range of very good agreement (0.80 - 1.00). This suggests that there is a very good agreement and we can consider this annotation as reliable."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
